; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_if_vlan.c_vlan_detach_protocol.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_if_vlan.c_vlan_detach_protocol.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ifnet = type { i32 }

@PF_VLAN = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [58 x i8] c"vlan_proto_detach(%s%d) ifnet_detach_protocol failed, %d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ifnet*)* @vlan_detach_protocol to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vlan_detach_protocol(%struct.ifnet* %0) #0 {
  %2 = alloca %struct.ifnet*, align 8
  %3 = alloca i32, align 4
  store %struct.ifnet* %0, %struct.ifnet** %2, align 8
  %4 = load %struct.ifnet*, %struct.ifnet** %2, align 8
  %5 = load i32, i32* @PF_VLAN, align 4
  %6 = call i32 @ifnet_detach_protocol(%struct.ifnet* %4, i32 %5)
  store i32 %6, i32* %3, align 4
  %7 = load i32, i32* %3, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %9, label %16

9:                                                ; preds = %1
  %10 = load %struct.ifnet*, %struct.ifnet** %2, align 8
  %11 = call i8* @ifnet_name(%struct.ifnet* %10)
  %12 = load %struct.ifnet*, %struct.ifnet** %2, align 8
  %13 = call i32 @ifnet_unit(%struct.ifnet* %12)
  %14 = load i32, i32* %3, align 4
  %15 = call i32 @printf(i8* getelementptr inbounds ([58 x i8], [58 x i8]* @.str, i64 0, i64 0), i8* %11, i32 %13, i32 %14)
  br label %16

16:                                               ; preds = %9, %1
  %17 = load i32, i32* %3, align 4
  ret i32 %17
}

declare dso_local i32 @ifnet_detach_protocol(%struct.ifnet*, i32) #1

declare dso_local i32 @printf(i8*, i8*, i32, i32) #1

declare dso_local i8* @ifnet_name(%struct.ifnet*) #1

declare dso_local i32 @ifnet_unit(%struct.ifnet*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
